color contrast issue

--- a/style.css
+++ b/style.css
@@ -121,10 +121,10 @@ nav ul li a:hover{
 
 
 .hero p {
-    color:#07cca1 ;
+    color:#0208c7 ;
     margin-top: 35px;
     font-weight: 700;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-shadow: 1px 1px 2px rgb(233 233 233 / 70%);
 }
 .hero-content{
     background-image:url(images/cover.jpg);
